{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 28,
  "lineage": "b8fa2a40-d30d-3ab2-9d44-430c904a7455",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "parth-tf-public-web-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d2f97c8735a48a15",
            "arn": "arn:aws:ec2:us-east-2:792408036646:instance/i-0c216170e84b19f30",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": true,
            "hibernation": false,
            "id": "i-0c216170e84b19f30",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "parth-tf-seemingly-intense-mantis",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "password_data": "T52T7sEPjL1hxvRZSJmCGBwFAtWgdaTmzzMJuBWNjAe8VvB2hEtjWjvlGYy8eN3/laKiwcXR3QRiARSkaLUstzhREw+wIkn8H6d2ILypVqW/iMJL2icZXYCLDyxKVD8WR2xA4x94cfiCiGhng1LnlRo4w2KRQaorm4CZ7qKG246xm3j83bGTh45T9mPy6E+LmkzrHFfQqbMlssuzMrKDfc6PJzxUbKGetDSxVvPm++Qx0l11dUyyitMhOvRKQhJkdxDMPh+NQoj8zpKUPhz2ASL3g8utyqOKy9E9WtnEaEVUUx0FhuwrLwYJvuriFtB7LQvBoyllppY8N/6qxl3OxSQMEi3jS84WZ0cbW3hfBhff4UwEV2OvPd3/lW4L7OkalS1BOPoioowyFKa5dfq05WQR+U5HMH6Sq0d5WBGjpCJ5N9vxZM35ysME1mus20779xuu12HuPvKoEPXajKRz6R [...]
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ebb28b5511cd4f38",
            "private_dns": "ip-10-0-13-71.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.13.71",
            "public_ip": "3.144.25.200",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a8a6e6131e49b01f",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00feafb3dd8d3ce33",
            "tags": {
              "Name": "parth-tf-seemingly-intense-mantis"
            },
            "tags_all": {
              "Name": "parth-tf-seemingly-intense-mantis"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08d61bf55c7559d4b"
            ]
          },
          "dependencies": [
            "aws_key_pair.parth-tf-key-pair",
            "aws_security_group.parth-tf-public-web-sg",
            "aws_subnet.parth-tf-public-subnet",
            "aws_vpc.parth-tf-vpc",
            "data.http.myip",
            "random_pet.random_pet",
            "tls_private_key.parth-tf-private-key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "parth-tf-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:792408036646:internet-gateway/igw-0e76c6153aa497ba7",
            "id": "igw-0e76c6153aa497ba7",
            "owner_id": "792408036646",
            "tags": {
              "Name": "parth-tf-seemingly-intense-mantis"
            },
            "tags_all": {
              "Name": "parth-tf-seemingly-intense-mantis"
            },
            "vpc_id": "vpc-049c3bbe89f81bfe8"
          },
          "dependencies": [
            "aws_vpc.parth-tf-vpc",
            "random_pet.random_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "parth-tf-nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:792408036646:network-acl/acl-0b1a781faa48af055",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0b1a781faa48af055",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 27017,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 500,
                "to_port": 27017
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 300,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 49152,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 600,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 80
              },
              {
                "action": "allow",
                "cidr_block": "76.191.25.48/32",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "76.191.25.48/32",
                "from_port": 3389,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 400,
                "to_port": 3389
              }
            ],
            "owner_id": "792408036646",
            "subnet_ids": [
              "subnet-00feafb3dd8d3ce33",
              "subnet-079fc661628d484d6"
            ],
            "tags": {
              "Name": "parth-tf-seemingly-intense-mantis"
            },
            "tags_all": {
              "Name": "parth-tf-seemingly-intense-mantis"
            },
            "vpc_id": "vpc-049c3bbe89f81bfe8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.parth-tf-private-subnet",
            "aws_subnet.parth-tf-public-subnet",
            "aws_vpc.parth-tf-vpc",
            "data.http.myip",
            "random_pet.random_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "parth-tf-public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:792408036646:route-table/rtb-028201f2b44a443b6",
            "id": "rtb-028201f2b44a443b6",
            "owner_id": "792408036646",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e76c6153aa497ba7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "parth-tf-seemingly-intense-mantis"
            },
            "tags_all": {
              "Name": "parth-tf-seemingly-intense-mantis"
            },
            "timeouts": null,
            "vpc_id": "vpc-049c3bbe89f81bfe8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.parth-tf-igw",
            "aws_vpc.parth-tf-vpc",
            "random_pet.random_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "parth-tf-public-rt-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f2e3b9bd75ca14ef",
            "route_table_id": "rtb-028201f2b44a443b6",
            "subnet_id": "subnet-00feafb3dd8d3ce33"
          },
          "dependencies": [
            "aws_internet_gateway.parth-tf-igw",
            "aws_route_table.parth-tf-public-rt",
            "aws_subnet.parth-tf-public-subnet",
            "aws_vpc.parth-tf-vpc",
            "random_pet.random_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "parth-tf-private-web-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:792408036646:security-group/sg-0355f084a91bbaad1",
            "description": "Allow SSH and MongoDB inbound traffic from the public subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0355f084a91bbaad1",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/20"
                ],
                "description": "MongoDB",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/20"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "parth-tf-private-web-sg",
            "name_prefix": "",
            "owner_id": "792408036646",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "parth-tf-seemingly-intense-mantis"
            },
            "tags_all": {
              "Name": "parth-tf-seemingly-intense-mantis"
            },
            "timeouts": null,
            "vpc_id": "vpc-049c3bbe89f81bfe8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.parth-tf-vpc",
            "random_pet.random_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "parth-tf-public-web-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:792408036646:security-group/sg-08d61bf55c7559d4b",
            "description": "Allow HTTP, HTTPS and RDP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08d61bf55c7559d4b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "76.191.25.48/32"
                ],
                "description": "RDP",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "parth-tf-public-web-sg",
            "name_prefix": "",
            "owner_id": "792408036646",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "parth-tf-seemingly-intense-mantis"
            },
            "tags_all": {
              "Name": "parth-tf-seemingly-intense-mantis"
            },
            "timeouts": null,
            "vpc_id": "vpc-049c3bbe89f81bfe8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.parth-tf-vpc",
            "data.http.myip",
            "random_pet.random_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "parth-tf-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:792408036646:subnet/subnet-079fc661628d484d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-079fc661628d484d6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "792408036646",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "parth-tf-seemingly-intense-mantis"
            },
            "tags_all": {
              "Name": "parth-tf-seemingly-intense-mantis"
            },
            "vpc_id": "vpc-049c3bbe89f81bfe8"
          },
          "dependencies": [
            "aws_vpc.parth-tf-vpc",
            "random_pet.random_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "parth-tf-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:792408036646:subnet/subnet-00feafb3dd8d3ce33",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00feafb3dd8d3ce33",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "792408036646",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "parth-tf-seemingly-intense-mantis"
            },
            "tags_all": {
              "Name": "parth-tf-seemingly-intense-mantis"
            },
            "vpc_id": "vpc-049c3bbe89f81bfe8"
          },
          "dependencies": [
            "aws_vpc.parth-tf-vpc",
            "random_pet.random_pet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "parth-tf-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:792408036646:vpc/vpc-049c3bbe89f81bfe8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d4b8c1fe8481a61b",
            "default_route_table_id": "rtb-02d1845afee16213e",
            "default_security_group_id": "sg-06ac3e8618b1dec5d",
            "dhcp_options_id": "dopt-0902356ae69bf18cc",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-049c3bbe89f81bfe8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02d1845afee16213e",
            "owner_id": "792408036646",
            "tags": {
              "Name": "parth-tf-seemingly-intense-mantis"
            },
            "tags_all": {
              "Name": "parth-tf-seemingly-intense-mantis"
            }
          },
          "dependencies": [
            "random_pet.random_pet"
          ]
        }
      ]
    }
  ]
}